# Galaxea_remote_control

./: readme.md
galaxea_robot_tele/: CMakeLists.txt
galaxea_robot_tele/config/: udp_config.yaml
galaxea_robot_tele/include/: flatbuffer_utils.hpp  pc_tele_node.hpp  robot_tele_node.hpp  udp_flatbuffer_utils.hpp  udp_socket.hpp
galaxea_robot_tele/include/galaxea_robot_tele/: robot_msg_generated.h
galaxea_robot_tele/schemas/: robot_msg.fbs
galaxea_robot_tele/src/: flatbuffer_utils.cpp  pc_tele_node.cpp  robot_tele_node.cpp  udp_flatbuffer_utils.cpp  udp_socket.cpp
src/galaxea_robot_tele/: CMakeLists.txt  package.xml
src/galaxea_robot_tele/config/: udp_config.yaml
src/galaxea_robot_tele/include/: flatbuffer_utils.hpp  pc_tele_node.hpp  robot_tele_node.hpp
src/galaxea_robot_tele/include/galaxea_robot_tele/: robot_msg_generated.h
src/galaxea_robot_tele/schemas/: robot_msg.fbs
src/galaxea_robot_tele/src/: flatbuffer_utils.cpp  pc_tele_node.cpp  robot_tele_node.cpp
src/rtele/: CMakeLists.txt  package.xml
src/rtele/src/: main.cc  rtc_tele_node.cc
src/rtele/src/rtc/: rtc_engine.cc  rtc_engine.h
src/udp_communication/: CMakeLists.txt  package.xml
src/udp_communication/config/: udp_config.yaml
src/udp_communication/launch/: udp_comm.launch.py
src/udp_communication/msg/: udp_messages.fbs
src/udp_communication/src/: udp_messages_generated.h  udp_node.cpp  udp_socket.cpp  udp_socket.hpp
