<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtele</name>
  <version>0.1.0</version>
  <description>Remote Teleoperation Application</description>
  <maintainer email="justatest@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 基础依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hdas_msg</depend>
  <depend>system_manager_msg</depend>
  <depend>teleoperation_msg_ros2</depend>
  
  <!-- !!! 新增：图像处理依赖 !!! -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- 系统库依赖 -->
  <depend>libopencv-dev</depend>
  <depend>libspdlog-dev</depend>
  <depend>libfmt-dev</depend>
  <depend>libssl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>