<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtele</name>
  <version>0.1.0</version>
  <description>Remote Teleoperation Application with VolcEngine RTC</description>
  <maintainer email="justatest@example.com">Tinker</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend> <!-- 新增: 用于 Trigger 服务 -->
  <depend>hdas_msg</depend>
  <depend>system_manager_msg</depend>
  <depend>teleoperation_msg_ros2</depend>
  
  <!-- 关键依赖: 机器人业务包 -->
  <depend>galaxea_robot_tele</depend> <!-- 新增: 必须有这个才能复用 FlatBuffer 代码 -->

  <!-- 图像处理 -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- 系统库 -->
  <depend>libopencv-dev</depend>
  <depend>libspdlog-dev</depend>
  <depend>libfmt-dev</depend>
  <depend>libssl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
