<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtele</name>
  <version>0.1.0</version>
  <description>RTC Teleoperation</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  
  <depend>hdas_msg</depend>
  <depend>system_manager_msg</depend>
  <depend>teleoperation_msg_ros2</depend>
  
  <!-- 必须包含原 UDP 包以复用 flatbuffer_utils -->
  <depend>galaxea_robot_tele</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>libspdlog-dev</depend>
  <depend>libssl-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>