<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_communication</name>
  <version>0.0.0</version>
  <description>UDP通信：机器人订阅话题→PC发布话题</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译时依赖（新增 ament_index_cpp） -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>   <!-- 关节消息 -->
  <build_depend>geometry_msgs</build_depend> <!-- 位姿消息 -->
  <build_depend>ament_index_cpp</build_depend> <!-- 新增：包路径依赖 -->

  <!-- 运行时依赖（新增 ament_index_cpp） -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>   <!-- 关节消息 -->
  <exec_depend>geometry_msgs</exec_depend> <!-- 位姿消息 -->
  <exec_depend>ament_index_cpp</exec_depend> <!-- 新增：包路径依赖 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
